# proof-of-lobster

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
app/: Cargo.toml  README.md
app/src/: agent_assets.rs  app.rs  auth.rs  client.rs  config.rs  extrinsic.rs  main.rs  moltbook.rs  wallet.rs
app/src/screens/: create.rs  home.rs  mod.rs  prompt.rs  view.rs
